tests/integration/tests/invalid_input/02_check_file_does_not_exist/sample.itest
; RUN: (%FILECHECK_EXEC file/does/not/exist 2>&1; test $? = 2) | %FILECHECK_TESTER_EXEC %s --match-full-lines
; CHECK: {{^.*}}FileCheck{{(\.py)?$}}
; CHECK: Could not open check file 'file/does/not/exist': No such file or directory
; CHECK-EMPTY:
